--- a/Views/partials/navbar.ejs
+++ b/Views/partials/navbar.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UniBite</title>
 
-    <!-- Stylesheets -->
+    
     <link rel="stylesheet" href="/Styles/Universalcss.css" />
 
 </head>
@@ -24,7 +24,7 @@
 
     <div class="logo">
         <a href="/">
-            <img src="/Images/LogoVF.png" alt="UniBite Logo"> <!-- UniBite Main Logo -->
+            <img src="/Images/LogoVF.png" alt="UniBite Logo"> 
         </a>
     </div>
 
