attempting to fix deployment

--- a/Views/executive.ejs
+++ b/Views/executive.ejs
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Executive Dashboard</title>
-    <link rel="stylesheet" href="/Styles/executive.css">
-    <link rel="stylesheet" href="/Styles/styles.css">
+    <link rel="stylesheet" href="/styles/executive.css">
+    <link rel="stylesheet" href="/styles/styles.css">
 
 </head>
 <body style="padding-top: 4rem;">
