--- a/Views/order-confirmation.ejs
+++ b/Views/order-confirmation.ejs
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Order Confirmation</title>
-    <link rel="stylesheet" href="/Styles/Cart.css" />
-   <link rel="stylesheet" href="/Styles/order-confirmations.css" />
+    <link rel="stylesheet" href="/styles/Cart.css" />
+   <link rel="stylesheet" href="/styles/order-confirmations.css" />
 </head>
 <body>
     <div class="confirmation-container">
