--- a/Views/UniBite.ejs
+++ b/Views/UniBite.ejs
@@ -6,8 +6,8 @@
     <title>UniBite</title>
 
     
-    <link rel="stylesheet" href="/Styles/UniBite.css" />
-    <link rel="stylesheet" href="/Styles/styles.css" />
+    <link rel="stylesheet" href="/styles/UniBite.css" />
+    <link rel="stylesheet" href="/styles/styles.css" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
     
