--- a/Views/error.ejs
+++ b/Views/error.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Not Found - UniBite</title>
-    <link rel="stylesheet" href="/Styles/styles.css">
+    <link rel="stylesheet" href="/styles/styles.css">
     <style>
         .error-container {
             min-height: calc(100vh - var(--header-height));
