--- a/Views/Products/Product-details.ejs
+++ b/Views/Products/Product-details.ejs
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Product Details</title>
-  <link rel="stylesheet" href="/styles/ProductDetails.css">
-  <link rel="stylesheet" href="/styles/Universalcss.css">
+  <link rel="stylesheet" href="/Styles/ProductDetails.css">
+  <link rel="stylesheet" href="/Styles/Universalcss.css">
 </head>
 
 <body>
