--- a/Views/Products/Products.ejs
+++ b/Views/Products/Products.ejs
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Products</title>
-  <link rel="stylesheet" href="/styles/Products.css">
-  <link rel="stylesheet" href="/styles/Universalcss.css">
+  <link rel="stylesheet" href="/Styles/Products.css">
+  <link rel="stylesheet" href="/Styles/Universalcss.css">
 
 </head>
 
