--- a/Views/Auth/Login.ejs
+++ b/Views/Auth/Login.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UniBite - Login</title>
-    <link rel="stylesheet" href="/styles/Login.css">
+    <link rel="stylesheet" href="/Styles/Login.css">
 </head>
 <body>
 
