--- a/Views/Cart.ejs
+++ b/Views/Cart.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart - UniBite</title>
-    <link rel="stylesheet" href="/styles/Cart.css" />
+    <link rel="stylesheet" href="/Styles/Cart.css" />
 </head>
 <body>
 <div class="cart-container">
