--- a/Views/store-detail.ejs
+++ b/Views/store-detail.ejs
@@ -13,7 +13,7 @@
 </head>
 <body data-vendor-id="<%= vendor._id %>">
 
-<%- include('partials/header') %>
+<%- include('partials/Header') %>
 
 <main>
     <div class="container store-detail-page">
@@ -205,7 +205,7 @@
     </div>
 </div>
 
-<%- include('partials/footer') %>
+<%- include('partials/Footer') %>
 <script src="/JavaScript/storeSearch.js"></script>
 </body>
 </html>
