Fix case sensitivity in script source path for Admin.js

--- a/Views/admin/dashboard.ejs
+++ b/Views/admin/dashboard.ejs
@@ -285,7 +285,7 @@
     <script src="/socket.io/socket.io.js"></script>
 
     
-    <script src="/JavaScript/admin.js"></script>
+    <script src="/JavaScript/Admin.js"></script>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
